Fixed up some errors and layout issues. There is a strange error with chrome creating scrollbars that don't scroll.

--- a/css/style.css
+++ b/css/style.css
@@ -12,33 +12,35 @@ body {
 
 .container {
     position: relative;
-    height: calc(100% - 1rem);
-    width: calc(100% - 1rem);
+    height: calc(100% - 4rem);
+    width: calc(100% - 4rem);
     background: lightblue;
     border: 1rem solid rgba(255, 255, 255, .4);
-    border-radius: .5rem;
+    /* border-radius: .5rem; */
     padding: 1rem;
 }
 
 .wrapper {
     position: relative;
     display: grid;
-    grid-template-columns: 4fr;
-    grid-auto-rows: 2fr;
-    height: calc(80% - 1rem);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: calc(90% - 2rem);
     width: calc(100% - 1rem);
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, 0.1);
     border-radius: .4rem;
+    margin: 0.5rem;
 }
 
 .card {
-    height: 20%;
-    width: 10%;
+    height: 70%;
+    width: 56%;
+    margin: 15% 22%;
     background: red;
 }
 
 .timer {
-    height: 20%;
+    height: 10%;
     color: whitesmoke;
     border: .5rem solid white;
     padding: .4rem;
